# starcoin

./: Cargo.toml
.github/workflows/: release.yml  release_asset.yml
account/api/: Cargo.toml
account/api/src/: types.rs
account/service/: Cargo.toml
block-relayer/: Cargo.toml
chain/: Cargo.toml
chain/src/: chain.rs
cmd/faucet/: Cargo.toml
cmd/miner_client/: Cargo.toml
cmd/miner_client/src/: miner.rs  worker.rs
cmd/miner_client/usbderive/: Cargo.toml
cmd/miner_client/usbderive/src/: derive.rs  lib.rs  proto.rs  tests.rs
cmd/starcoin/: Cargo.toml
cmd/starcoin/src/: main.rs
cmd/starcoin/src/debug/: gen_txn_cmd.rs
cmd/tx-factory/: Cargo.toml
commons/crypto/: Cargo.toml
commons/decrypt/: Cargo.toml
commons/logger/: Cargo.toml
commons/logger/src/: lib.rs
commons/metrics/: Cargo.toml
commons/perf-timer/: Cargo.toml
commons/perf-timer/src/: lib.rs
commons/proptest-helpers/: Cargo.toml
commons/service-registry/: Cargo.toml
commons/service-registry/src/: types.rs
commons/stest/: Cargo.toml
commons/stream-task/: Cargo.toml
commons/stream-task/src/: event.rs
commons/utils/: Cargo.toml
config/: Cargo.toml
consensus/cryptonight-rs/src/: lib.rs
consensus/src/: argon.rs  cn.rs  consensus.rs  consensus_test.rs  difficulty.rs  dummy.rs  keccak.rs  lib.rs
core/accumulator/: Cargo.toml
core/accumulator/src/: accumulator_info.rs
core/forkable-jellyfish-merkle/: Cargo.toml
core/forkable-jellyfish-merkle/src/: proof.rs
demos/: my_token.mv  test.mv
demos/my_token/module/: my_token.move  test.move.txt
demos/my_token/scripts/: adopt.move  issue.move  transfer.move
devtools/x/: Cargo.toml
devtools/x/src/: main.rs
docker/: Dockerfile
etc/: starcoin_types.yml
executor/: Cargo.toml
executor/benchmark/: Cargo.toml
executor/benchmark/src/: lib.rs
executor/src/: executor.rs  executor_test.rs  lib.rs
miner/: Cargo.toml
miner/src/: headblock_pacemaker.rs  lib.rs  stratum.rs  task.rs
miner/src/miner_client/: mod.rs  tests.rs  worker.rs
miner/tests/: miner_test.rs
network/: Cargo.toml
network-p2p/: Cargo.toml
network-p2p/types/: Cargo.toml
network-p2p/types/src/: network_state.rs
network-rpc/: Cargo.toml
network/api/: Cargo.toml
network/api/src/: peer_provider.rs
node/: Cargo.toml
rpc/api/: Cargo.toml
rpc/api/src/: contract_api.rs  lib.rs  miner.rs  network_manager.rs  node_manager.rs  sync_manager.rs  types.rs
rpc/api/src/account/: mod.rs
rpc/api/src/chain/: mod.rs
rpc/api/src/debug/: mod.rs
rpc/api/src/node/: mod.rs
rpc/api/src/state/: mod.rs
rpc/api/src/txpool/: mod.rs
rpc/api/src/types/: node_api_types.rs  pubsub.rs
rpc/client/: Cargo.toml
rpc/client/src/: lib.rs
rpc/server/: Cargo.toml
rpc/server/src/: lib.rs
rpc/server/src/module/: txpool_rpc.rs  wallet_rpc.rs
rpc/server/src/module/pubsub/: tests.rs
scripts/: install_llvm.ps1  release.sh
state/state-tree/src/: state_tree_test.rs
state/statedb/src/: lib.rs
storage/src/: lib.rs
sync/: Cargo.toml
sync/api/: Cargo.toml
sync/api/src/: lib.rs
test-helper/: Cargo.toml
testsuite/: Cargo.toml
txpool/: Cargo.toml
txpool/api/: Cargo.toml
txpool/api/src/: lib.rs
txpool/src/: tx_pool_service_impl.rs
types/: Cargo.toml
types/src/: account_state.rs  block.rs  peer_info.rs  startup_info.rs  sync_status.rs  system_events.rs
vm/compiler/: Cargo.toml
vm/functional-tests/: Cargo.toml
vm/functional-tests/tests/testsuite/libra/: token.move
vm/move-coverage/: Cargo.toml
vm/move-explain/: Cargo.toml
vm/move-prover/: Cargo.toml
vm/stdlib/: Cargo.toml
vm/transaction-builder-generator/: Cargo.toml
vm/types/: Cargo.toml
vm/types/src/: access_path.rs  event.rs  genesis_config.rs
vm/types/src/on_chain_resource/: epoch.rs
vm/types/src/token/: token_code.rs
vm/types/src/transaction/: authenticator.rs  mod.rs  module.rs  package.rs  script.rs
vm/vm-runtime/: Cargo.toml
vm/vm-runtime/src/: chain_state.rs  starcoin_vm.rs
wallet/lib/: Cargo.toml
wallet/lib/src/: keystore_wallet.rs  lib.rs
wallet/service/src/: actor.rs
