[package]
name = "starcoin-proptest-helpers"
version = "0.4.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
diem-proptest-helpers = { package="diem-proptest-helpers",  git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }

proptest = "0.10.1"
proptest-derive = "0.2.0"
