[package]
name = "starcoin-proptest-helpers"
version = "0.4.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
diem-proptest-helpers = { package="diem-proptest-helpers",  git = "https://github.com/fikgol/diem", rev="85f99052a21ed3a1129780b1c563074394039734" }

proptest = "0.10.1"
proptest-derive = "0.2.0"
