[package]
name = "starcoin-move-explain"
version = "0.10.1"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem Move abort code explanations"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
structopt = "0.3.21"
stdlib = { package="stdlib", path = "../stdlib"}
diem-workspace-hack = { git = "https://github.com/fikgol/diem", rev="85f99052a21ed3a1129780b1c563074394039734" }
errmapgen = { git = "https://github.com/fikgol/diem", rev="85f99052a21ed3a1129780b1c563074394039734" }
move-core-types = { git = "https://github.com/fikgol/diem", rev = "85f99052a21ed3a1129780b1c563074394039734" }
bcs-ext = { package="bcs-ext", path = "../../commons/bcs_ext" }

[features]
default = []
