[package]
name = "starcoin-move-explain"
version = "0.10.1"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem Move abort code explanations"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
structopt = "0.3.21"
stdlib = { package="stdlib", path = "../stdlib"}
diem-workspace-hack = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
errmapgen = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
move-core-types = { git = "https://github.com/fikgol/diem", rev = "c3fc4d0f364591e51535de88c4039ed45d506a27" }
bcs-ext = { package="bcs-ext", path = "../../commons/bcs_ext" }

[features]
default = []
