[package]
name = "move-prover"
version = "0.10.1"
authors = ["Diem Association <opensource@diem.com>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[dependencies]
# diem dependencies
boogie-backend = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
move-lang = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
move-model = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
docgen = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
errmapgen = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
bytecode = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
vm = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
diem-temppath = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
diem-workspace-hack = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
bytecode-source-map = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
move-ir-types = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
abigen = { git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }

# external dependencies
async-trait = "0.1.42"
anyhow = "1.0.38"
clap = "2.33.3"
codespan = "0.8.0"
codespan-reporting = "0.8.0"
futures = "0.3.12"
handlebars = "3.5.2"
hex = "0.4.2"
itertools = "0.10.0"
log = "0.4.14"
num = "0.3.0"
pretty = "0.10.0"
rand = "0.7.3"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
simplelog = "0.9.0"
once_cell = "1.4.1"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.8"

[dev-dependencies]
datatest-stable = {git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
move-prover-test-utils = {git = "https://github.com/fikgol/diem", rev="c3fc4d0f364591e51535de88c4039ed45d506a27" }
shell-words = "1.0.0"

[[test]]
name = "testsuite"
harness = false
